# screenshot-mcp

./: Cargo.toml  README.md  init.json  mcp-runner.sh  parse-images-mock.js  read_image.js  search_mcp.js  test-server.js  test-vscode-init.sh  test.js
src/: main.rs  tests.rs
